--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-urlrewrite": "^1.2.0",
-    "oidc-provider": "^4.0.1"
+    "koa-body": "^4.0.0",
+    "koa-ejs": "^4.1.1",
+    "koa-mount": "^3.0.0",
+    "koa-router": "^7.4.0",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.0.10",
+    "oidc-provider": "^4.0.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
